# gsplay

./: .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  LICENSE  README.md  REFACTORING_PLAN.md  check_gsmod_path.py  install.bat  install.ps1  install.sh  pyproject.toml  pytest.ini
.claude/: settings.local.json
.github/workflows/: ci.yml  publish.yml  release.yml
data/: instances.json
docs/: API_COMPARISON.md  C4_ARCHITECTURE.md  CHANGELOG.md  CLOUD_STORAGE.md  CONTRIBUTING.md  DOCUMENTATION_UPDATE_2025-11-25.md  Makefile  PLY_ARCHITECTURE.md  README.md  ROTATION_FEATURE.md  SCALE_FILTERING.md  SH_COLOR_EDITING_INSTRUCTIONS.md  SUPERSPLAT_CAMERA.md  code_simplifications.md  make.bat
docs/architecture/: ARCHITECTURE_FINAL_REPORT.md
docs/source/: conf.py  contributing.md  index.rst
docs/source/_static/css/: custom.css
docs/source/api/: domain.rst  gsplay.rst  index.rst  infrastructure.rst  launcher.rst  models.rst  plugins.rst  shared.rst
docs/source/architecture/: c4_architecture.md  index.rst
docs/source/cli/: gsplay.rst  index.rst  launcher.rst
docs/source/guides/: index.rst  plugins.md  quickstart.md
launcher/: README.md  build_frontend.sh  pyproject.toml
launcher/frontend/: deno.json  index.html  tsconfig.json  vite.config.ts
launcher/frontend/src/: App.tsx  index.css  version.ts
launcher/frontend/src/api/: client.ts
launcher/frontend/src/components/: Console.tsx  CreateInstanceForm.tsx  FileBrowser.tsx  Header.tsx  InstanceCard.tsx  InstanceList.tsx  Instances.tsx  LaunchHistory.tsx  LaunchSettings.tsx  StatusBadge.tsx
launcher/frontend/src/stores/: app.ts  browse.ts  console.ts  error.ts  gpu.ts  history.ts  index.ts  instances.ts  launchSettings.ts  orphaned.ts  stream.ts  system.ts
launcher/gsplay_launcher/: __init__.py  config.py  main.py  models.py
launcher/gsplay_launcher/api/: __init__.py  app.py  dependencies.py  routes.py  schemas.py
launcher/gsplay_launcher/api/routes/: __init__.py  browse.py  cleanup.py  control.py  gpu.py  health.py  instances.py  logs.py  proxy.py
launcher/gsplay_launcher/cli/: __init__.py  cleanup.py
launcher/gsplay_launcher/services/: __init__.py  file_browser.py  gpu_info.py  id_encoder.py  instance_manager.py  log_service.py  port_allocator.py  process_manager.py  state_persistence.py  websocket_proxy.py
launcher/gsplay_launcher/templates/: dashboard.html
src/domain/: data.py  entities.py  filters.py  interfaces.py  interpolation.py  lifecycle.py  time.py
src/domain/services/: __init__.py  color_adjustment.py  transform.py
src/gsplay/: __init__.py
src/gsplay/config/: __init__.py  io.py  rotation_conversions.py  settings.py  slider_constants.py  ui_handles.py
src/gsplay/control/: __init__.py  server.py
src/gsplay/core/: api.py  app.py  bootstrap.py  container.py  dependency_check.py  main.py  setup.py
src/gsplay/core/components/: __init__.py  export_component.py  model_component.py  render_component.py
src/gsplay/core/handlers/: __init__.py  auto_correction.py  color_presets.py
src/gsplay/dispatch/: __init__.py  dispatcher.py
src/gsplay/initialization/: __init__.py  ui_setup.py
src/gsplay/interaction/: events.py  handlers.py  playback.py
src/gsplay/nerfview/: __init__.py  _renderer.py  render_panel.py  viewer.py
src/gsplay/processing/: __init__.py  color.py  context.py  filter_transform.py  gs_bridge.py  opacity.py  protocols.py  strategies.py  transformer.py  volume_filter.py
src/gsplay/rendering/: camera.py  camera_state.py  camera_ui.py  jpeg_encoder.py  quaternion_utils.py  renderer.py
src/gsplay/state/: edit_manager.py  scene_bounds_manager.py
src/gsplay/streaming/: __init__.py  websocket_server.py
src/gsplay/ui/: controller.py  filter_visualizer.py  layers.py  layout.py
src/gsplay/ui/panels/: __init__.py  info_panel.py
src/infrastructure/: __init__.py  model_factory.py  processing_mode.py
src/infrastructure/cache/: __init__.py  frame_cache.py
src/infrastructure/exporters/: __init__.py  compressed_ply_exporter.py  compressed_ply_sink.py  factory.py  ply_exporter.py  ply_sink.py
src/infrastructure/health/: __init__.py  monitor.py
src/infrastructure/io/: __init__.py  discovery.py  path_io.py
src/infrastructure/processing/: __init__.py  data_validation.py  gaussian_constants.py  gspro_adapter.py
src/infrastructure/processing/ply/: __init__.py  format_loader.py  loader.py  utils.py  writer.py
src/infrastructure/registry/: __init__.py  sinks.py  source_registry.py  sources.py
src/infrastructure/resilience/: __init__.py  circuit_breaker.py  retry.py
src/infrastructure/resources/: __init__.py  executor_manager.py  gpu_manager.py
src/infrastructure/validation/: __init__.py  config_validator.py
src/models/: __init__.py
src/models/composite/: __init__.py  composite_model.py
src/models/ply/: __init__.py  interpolated_model.py  optimized_model.py  ply_source.py
src/plugins/: PLUGINS.md  __init__.py  discovery.py
src/plugins/base/: __init__.py  data_source_base.py  decorators.py
src/plugins/demo/: __init__.py  demo_sink.py  demo_source.py
src/plugins/examples/: minimal_source.py
src/plugins/testing/: __init__.py  harness.py  mock_data.py
src/shared/: __init__.py  exceptions.py  math.py  perf.py
tests/: README.md  __init__.py  conftest.py  test_frame_cache.py  test_gs_bridge.py  test_natural_sort.py  test_viewer_container.py
tests/architecture/: test_backward_compatibility.py  test_flexibility.py  test_phase2_improvements.py  test_phase3_improvements.py
tests/functional/: test_ply_roundtrip.py
